# PaisaLog

./: .gitignore
PaisaLogApp/: App.tsx  app.json  package-lock.json  package.json
PaisaLogApp/android/: keystore.properties  settings.gradle
PaisaLogApp/android/app/: build.gradle
PaisaLogApp/ios/: Podfile
PaisaLogApp/ios/PaisaLogApp/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
PaisaLogApp/ios/PaisaLogApp.xcodeproj/: project.pbxproj
PaisaLogApp/ios/PaisaLogAppTests/: PaisaLogAppTests.m
PaisaLogApp/qa/: BELIEFS.md  add_qa_tests.py  fix_log.csv  run_tests.py  test_cases.csv
PaisaLogApp/src/components/: AmountDisplay.tsx  BudgetAlertBanner.tsx  HideSheet.tsx  MPINModal.tsx
PaisaLogApp/src/config/: currencies.json  index.ts  timezones.json
PaisaLogApp/src/navigation/: TabNavigator.tsx  index.tsx
PaisaLogApp/src/screens/: SmsReviewScreen.tsx
PaisaLogApp/src/services/: SmsIngestion.ts  api.ts  bill_scan.ts  fx.ts  merchantEnrichment.ts  mpin.ts  photo.ts  sms.ts  subscriptions.ts
PaisaLogApp/src/utils/: date.ts  money.ts
paisalog-cli-frontend/paisalog-cli/: App.tsx  README.md  package.json
paisalog-rust/: Cargo.toml  Dockerfile  docker-compose.yml  docker-entrypoint.sh
paisalog-rust/migrations/: 001_core_schema.sql  002_indexes.sql  003_functions.sql  004_rls_policies.sql  005_seed.sql  006_schema_additions.sql  007_schema_fixes.sql  008_schema_fixes2.sql  009_schema_fixes3.sql  010_schema_fixes4.sql  011_schema_fixes5.sql  sms_parse_trace_view.sql
paisalog-rust/src/: errors.rs  main.rs
paisalog-rust/src/api/: accounts.rs  auth.rs  cash.rs  children.rs  customer.rs  export.rs  household.rs  investments.rs  mod.rs  refunds.rs  sms_review.rs  transactions.rs  user.rs
paisalog-rust/src/compliance/: mod.rs
paisalog-rust/src/config/: mod.rs
paisalog-rust/src/db/: mod.rs  queries.rs
paisalog-rust/src/jobs/: cleanup.rs
paisalog-rust/src/middleware/: auth.rs  rate_limit.rs
paisalog-rust/src/parser/: category.rs  mod.rs  subscription.rs
paisalog-rust/src/services/: auth.rs  crypto.rs  fingerprint.rs  ingest.rs  mod.rs  refunds.rs  scheduler.rs  transfer_detection.rs
paisalog-rust/tests/: parser_tests.rs
(+41 files in other folders)
