[package]
name        = "paisalog"
version     = "0.1.0"
edition     = "2021"
description = "PaisaLog API — privacy-first expense tracking"

[[bin]]
name = "paisalog"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[dependencies]
# Async runtime
tokio          = { version = "1.38", features = ["full"] }

# Web framework
axum           = { version = "0.7", features = ["macros", "multipart"] }
tower          = "0.4"
tower-http     = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Database
sqlx           = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Serialisation
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

# Validation
validator      = { version = "0.18", features = ["derive"] }

# Auth / crypto
jsonwebtoken   = "9"
argon2         = "0.5"           # not for passwords (we use magic links) but for HMAC invite codes
sha2           = "0.10"
hex            = "0.4"
aes-gcm        = "0.10"
rand           = "0.8"
uuid           = { version = "1", features = ["v4", "serde"] }

# Time
chrono         = { version = "0.4", features = ["serde"] }

# Config / env
dotenvy        = "0.15"
config         = "0.14"

# Error handling
thiserror      = "1"
anyhow         = "1"

# Logging / tracing
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Email
lettre         = { version = "0.11", features = ["tokio1-native-tls", "builder"] }

# IMAP
async-imap     = "0.9"
async-native-tls = "0.5"

# HTTP client (for Gmail API, ip geolocation)
reqwest        = { version = "0.12", features = ["json", "rustls-tls"] }

# Regex (SMS/email parsing)
regex          = "1"
once_cell      = "1"             # for compiled regex statics

# Scheduling
tokio-cron-scheduler = "0.10"

# Rate limiting
governor       = "0.6"

[dev-dependencies]
axum-test = "19.1.1"
tokio-test     = "0.4"
assert_matches = "1.5"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
